--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
+Flask-Cors==5.0.0
 google-api-core==1.25.0
 google-api-python-client==1.12.8
 google-auth==1.24.0
